Project structure and settings fixed Gradle settings fixed Creation of one block and item

--- a/src/main/resources/assets/farmania/lang/en_us.json
+++ b/src/main/resources/assets/farmania/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "item.farmania.diamond_apple": "Diamond Apple",
-  "item.farmania.diamond_seed": "Diamond Seed",
-  "block.farmania.food_furnace" : "Food Furnace"
+  "item.farmania.strange_seed": "Strange Seed",
+  "block.farmania.magical_furnace" : "Magical furnace",
+  "itemGroup.farmania.farmania" : "Farmania"
 }
