Strange seed created #3

--- a/src/main/resources/assets/farmania/lang/en_us.json
+++ b/src/main/resources/assets/farmania/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.farmania.strange_seed": "Strange Seed",
   "block.farmania.magical_furnace" : "Magical furnace",
-  "itemGroup.farmania.farmania" : "Farmania"
+  "block.farmania.magical_wheat_crop" : "Magical Wheat",
+  "itemGroup.farmaniaGroup" : "Farmania"
 }
